force-app/main/default/objects/Automatic_Bundling_Config__c/Automatic_Bundling_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configure settings for starting automatic bundling and any follow up process</description>
    <label>Automatic Bundling Config</label>
</CustomObject>