force-app/main/default/objects/Automatic_Bundling_Config__c/fields/Filter_By_Checkbox_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Filter_By_Checkbox_Field_API_Name__c</fullName>
    <inlineHelpText>API Name of the checkbox field on the Service Appointment which is used for input when creating a new optimization request</inlineHelpText>
    <label>Filter By Checkbox Field (API Name)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>