force-app/main/default/objects/Automatic_Bundling_Config__c/fields/Only_Optimize_Unscheduled_Appointments__c.field-meta.xml
<CustomField>
    <fullName>Only_Optimize_Unscheduled_Appointments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, both unscheduled and scheduled appointments will be optimized, otherwise only unscheduled appointments.</inlineHelpText>
    <label>Only Optimize Unscheduled Appointments</label>
    <type>Checkbox</type>
</CustomField>