force-app/main/default/objects/Automatic_Bundling_Config__c/fields/Optimization_Horizon_Length_Days__c.field-meta.xml
<CustomField>
    <fullName>Optimization_Horizon_Length_Days__c</fullName>
    <inlineHelpText>Optimization horizon length in days (max 21 for LS, 31 for ES&amp;O)</inlineHelpText>
    <label>Optimization Horizon Length (Days)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>