force-app/main/default/objects/Automatic_Bundling_Config__c/fields/Scheduling_Policy_Name__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Policy_Name__c</fullName>
    <inlineHelpText>Name of the scheduling policy to use when starting optimization after automatic bundling has completed</inlineHelpText>
    <label>Scheduling Policy Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>