force-app/main/default/objects/Automatic_Bundling_Config__c/fields/Start_Optimization_Once_Completed__c.field-meta.xml
<CustomField>
    <fullName>Start_Optimization_Once_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked and Automatic Bundling completes, an Optimization Request is created for the same territories that are part of the Automatic Bundling optimization request record</inlineHelpText>
    <label>Start Optimization Once Completed</label>
    <type>Checkbox</type>
</CustomField>